--- a/index.html
+++ b/index.html
@@ -2,14 +2,158 @@
 <html lang="pl-PL">
 <head>
       <meta charset="UTF-8">
-      <title>zadanie_1</title>
+      <title>safe_bank</title>
       <link rel="stylesheet" href="css/main.css">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
       <body>
-        <div class="rectangle">
-            <p>test</p>
-        </div>
+
+          <div class="grid-container">
+
+              <div id="header" class="row">
+                  <div id="logo" class="col-3">
+                    <p>logo</p>
+                  </div>
+                  <div class="col-3">
+                      <div id="search">
+                        <p>search</p>
+                      </div>
+                      <div id="button">
+                        <p>button</p>
+                      </div>
+                  </div>
+              </div>
+
+              <div id="menu" class="row">
+                  <div class="col-6">
+                      <ul>
+                          <li>
+                            Klienci indywidualni
+                          </li>
+                          <li>
+                            Przedsiębiorcy
+                          </li>
+                          <li>
+                            Firmy i samorządy
+                          </li>
+                          <li>
+                            Rolnicy
+                          </li>
+                          <li>
+                            Korporacje
+                          </li>
+                          <li>
+                            Uczniowie, studenci
+                          </li>
+                      </ul>
+                      <p>Bezpieczny Bank</p>
+                  </div>
+              </div>
+
+              <div id="section_landscape" class="row">
+                  <div class="col-6">
+                      <div id="window">
+                          <p>Skorzystaj ze specjalnej oferty</p>
+                          <p>PODRÓŻUJ BEZ OBAW</p>
+                          <button>SPRAWDZ</button>
+                      </div>
+                  </div>
+              </div>
+
+              <div id="section_key" class="row">
+                  <div class="col-3">
+                      <div id="image_key">
+                        <p>key</p>
+                      </div>
+                  </div>
+                  <div class="col-3">
+                      <div id="slide">
+                      </div>
+                  </div>
+              </div>
+
+              <div id="section_icons" class="row">
+                  <div class="col-2">
+                      <div id="icon_comuter">
+                      </div>
+                      <p>Konto online</p>
+                      <p>Zaloz konto przez internet</p>
+                      <button>Otworz konto</button>
+                  </div>
+                  <div class="col-2">
+                      <div id="icon_cloud">
+                      </div>
+                      <p>Rozpocznij chat</p>
+                      <p>Porozmawiaj z doradcą</p>
+                      <button>Zapytaj</button>
+                  </div>
+                  <div class="col-2">
+                      <div id="icon_percent">
+                      </div>
+                      <p>Kredyt gotowkowy</p>
+                      <p>Ustal rate i date splaty</p>
+                      <button>Sprawdz</button>
+                  </div>
+              </div>
+
+              <div id="section_details" class="row">
+                  <div class="col-2">
+                      <ul>Klienci Indywidualni
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                      </ul>
+                  </div>
+                  <div class="col-2">
+                      <ul>Klienci VIP Premium
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                      </ul>
+                  </div>
+                  <div class="col-2">
+                      <ul>Male firmy i korporacje
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                          <li></li>
+                      </ul>
+                  </div>
+              </div>
+
+              <div id="footer" class="row">
+                  <div class="col-4">
+                      <p>801 222 222</p>
+                      <p>
+                        BB Bezpieczny Bank S.A. Wszelkie prawa zastrzezone. Korzystanie z serwisu oznacza akceptacje regulaminu
+                      </p>
+                  </div>
+                  <div class="col-2">
+                      <ul>
+                          <li>Mapa serwisu</li>
+                          <li>English</li>
+                          <li>Twitter</li>
+                          <li>facebook</li>
+                      </ul>
+                  </div>
+              </div>
+
+          </div>
+
         <script src="js/jquery-3.1.1.min.js"></script>
         <script src="js/app.js"></script>
       </body>
