inserting the content

--- a/index.html
+++ b/index.html
@@ -11,15 +11,16 @@
           <div class="grid-container">
 
               <div id="header" class="row">
-                  <div id="logo" class="col-3">
-                    <p>logo</p>
+                  <div id="logo" class="col-3 container">
+                      <div id="image_logo"></div>
+                      <div id="menu_mobile">s</div>
                   </div>
-                  <div class="col-3">
+                  <div id="login" class="col-3 container">
                       <div id="search">
-                        <p>search</p>
+                          <input type="search">
                       </div>
                       <div id="button">
-                        <p>button</p>
+                          <button>Zaloguj</button>
                       </div>
                   </div>
               </div>
@@ -28,45 +29,55 @@
                   <div class="col-6">
                       <ul>
                           <li>
-                            Klienci indywidualni
+                            <a href="#">Klienci indywidualni</a>
                           </li>
                           <li>
-                            Przedsiębiorcy
+                            <a href="#">Przedsiębiorcy</a>
                           </li>
                           <li>
-                            Firmy i samorządy
+                            <a href="#">Firmy i samorządy</a>
                           </li>
                           <li>
-                            Rolnicy
+                            <a href="#">Rolnicy</a>
                           </li>
                           <li>
-                            Korporacje
+                            <a href="#">Korporacje</a>
                           </li>
                           <li>
-                            Uczniowie, studenci
+                            <a href="#">Uczniowie, studenci</a>
                           </li>
                       </ul>
                       <p>Bezpieczny Bank</p>
                   </div>
               </div>
 
-              <div id="section_landscape" class="row">
-                  <div class="col-6">
-                      <div id="window">
-                          <p>Skorzystaj ze specjalnej oferty</p>
-                          <p>PODRÓŻUJ BEZ OBAW</p>
-                          <button>SPRAWDZ</button>
+              <div  class="row">
+                  <div class="col-6 container">
+                      <div id="section_landscape" class="container">
+                          <div id="element_decoration">
+                          </div>
+                          <div id="window">
+                              <p>Skorzystaj ze specjalnej oferty</p>
+                              <p>PODRÓŻUJ BEZ OBAW</p>
+                              <button>SPRAWDZ</button>
+                          </div>
                       </div>
                   </div>
               </div>
 
               <div id="section_key" class="row">
-                  <div class="col-3">
+                  <div class="col-3 container">
                       <div id="image_key">
-                        <p>key</p>
                       </div>
+                      <div id="text_key">
+                          <p>Kredyt hipoteczny</p>
+                          <p>
+                              Phone fixie wayfarers, typewriter lumbersexual before they sold out jianbing ennui tilde. Williamsburg single-origin coffee photo booth, trust fund green juice pariatur craft beer cred art party fam normcore ex.
+                          </p>
+                      </div>
+
                   </div>
-                  <div class="col-3">
+                  <div class="col-3 container">
                       <div id="slide">
                       </div>
                   </div>
