insert content elements

--- a/index.html
+++ b/index.html
@@ -72,33 +72,44 @@
                       <div id="text_key">
                           <p>Kredyt hipoteczny</p>
                           <p>
-                              Phone fixie wayfarers, typewriter lumbersexual before they sold out jianbing ennui tilde. Williamsburg single-origin coffee photo booth, trust fund green juice pariatur craft beer cred art party fam normcore ex.
+                              Williamsburg single-origin coffee photo booth, trust fund green juice pariatur craft beer cred art party fam normcore ex.
                           </p>
+                          <a href="#">Dowiedz sie wiecej</a>
                       </div>
 
                   </div>
                   <div class="col-3 container">
                       <div id="slide">
+                          <p>Pozyczka gotowkowa</p>
+                          <div id="slide_price">
+                              <p>kwota 10tys</p>
+                          </div>
+                          <div id="slide_time">
+                              <p>czas trwania 2 lata</p>
+                          </div>
+                          <p>Rata 50zl</p>
+                          <a href="#">Dowiedz sie wiecej</a>
                       </div>
                   </div>
               </div>
 
               <div id="section_icons" class="row">
-                  <div class="col-2">
-                      <div id="icon_comuter">
+                  <div class="col-2 container">
+                      <div id="icon_computer">
+
                       </div>
                       <p>Konto online</p>
                       <p>Zaloz konto przez internet</p>
                       <button>Otworz konto</button>
                   </div>
-                  <div class="col-2">
+                  <div class="col-2 container">
                       <div id="icon_cloud">
                       </div>
                       <p>Rozpocznij chat</p>
                       <p>Porozmawiaj z doradcą</p>
                       <button>Zapytaj</button>
                   </div>
-                  <div class="col-2">
+                  <div class="col-2 container">
                       <div id="icon_percent">
                       </div>
                       <p>Kredyt gotowkowy</p>
@@ -108,58 +119,56 @@
               </div>
 
               <div id="section_details" class="row">
-                  <div class="col-2">
+                  <div class="col-2 container">
                       <ul>Klienci Indywidualni
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
+                          <li>Konta</li>
+                          <li>Oszczednosci</li>
+                          <li>Kredyty</li>
+                          <li>Karty</li>
+                          <li>Ubiezpieczenia</li>
+                          <li>Inwestycje</li>
+                          <li>Programy</li>
+                          <li>Bankowosc elektroniczna</li>
                       </ul>
                   </div>
-                  <div class="col-2">
+                  <div class="col-2 container">
                       <ul>Klienci VIP Premium
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
+                          <li>Konta</li>
+                          <li>Lokaty i inwestycje</li>
+                          <li>Kredyty</li>
+                          <li>Karty</li>
+                          <li>Ubezpieczenia</li>
+                          <li>Ubezpieczenia inwestycyjne</li>
+                          <li>Programy</li>
+                          <li>Program VIP Premium</li>
                       </ul>
                   </div>
-                  <div class="col-2">
+                  <div class="col-2 container">
                       <ul>Male firmy i korporacje
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
-                          <li></li>
+                          <li>Konta</li>
+                          <li>Lokaty i inwestycje</li>
+                          <li>Kredyty</li>
+                          <li>Transakcje walutowe</li>
+                          <li>Gwarancje bankowe</li>
+                          <li>Terminale platnicze</li>
+                          <li>Faktoring</li>
+                          <li>Bankowosc elektroniczna</li>
                       </ul>
                   </div>
               </div>
 
               <div id="footer" class="row">
-                  <div class="col-4">
+                  <div class="col-4 container">
                       <p>801 222 222</p>
                       <p>
                         BB Bezpieczny Bank S.A. Wszelkie prawa zastrzezone. Korzystanie z serwisu oznacza akceptacje regulaminu
                       </p>
                   </div>
-                  <div class="col-2">
-                      <ul>
-                          <li>Mapa serwisu</li>
-                          <li>English</li>
-                          <li>Twitter</li>
-                          <li>facebook</li>
-                      </ul>
+                  <div class="col-2 container">
+                      <p>Mapa serwisu</p>
+                      <p>English</p>
+                      <p>Twitter</p>
+                      <p>facebook</p>
                   </div>
               </div>
 
