--- a/index.html
+++ b/index.html
@@ -13,40 +13,33 @@
               <div id="header" class="row">
                   <div id="logo" class="col-3 container">
                       <div id="image_logo"></div>
-                      <div id="menu_mobile">s</div>
+
+                        <button id="menu_mobile">
+                          &#9776;
+                        </button>
+
                   </div>
                   <div id="login" class="col-3 container">
                       <div id="search">
-                          <input type="search">
+                          <input type="search" placeholder="Szukaj">
                       </div>
-                      <div id="button">
+                      <div id="button_login">
                           <button>Zaloguj</button>
                       </div>
                   </div>
               </div>
 
               <div id="menu" class="row">
-                  <div class="col-6">
-                      <ul>
-                          <li>
-                            <a href="#">Klienci indywidualni</a>
-                          </li>
-                          <li>
-                            <a href="#">Przedsiębiorcy</a>
-                          </li>
-                          <li>
-                            <a href="#">Firmy i samorządy</a>
-                          </li>
-                          <li>
-                            <a href="#">Rolnicy</a>
-                          </li>
-                          <li>
-                            <a href="#">Korporacje</a>
-                          </li>
-                          <li>
-                            <a href="#">Uczniowie, studenci</a>
-                          </li>
-                      </ul>
+                  <div class="col-6 container">
+                        <div id="nav" class="nav-content">
+                            <a id="closebtn" class="links"></a>
+                            <a class="links" href="#">Klienci indywidualni</a>
+                            <a class="links" href="#">Przedsiębiorcy</a>
+                            <a class="links" href="#">Firmy i samorządy</a>
+                            <a class="links" href="#">Rolnicy</a>
+                            <a class="links" href="#">Korporacje</a>
+                            <a class="links" href="#">Uczniowie, studenci</a>
+                        </div>
                       <p>Bezpieczny Bank</p>
                   </div>
               </div>
