--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                             <a class="links" href="#">Uczniowie, studenci</a>
                         </div>
                       <p>Bezpieczny Bank</p>
+                      <div id="decoration">
+                      </div>
                   </div>
               </div>
 
